<?xml version="1.0"?>
<package format="2">
  <name>sensorblue_data_collection</name>
  <version>0.1.0</version>
  <description>The sensorblue_data_collection package</description>

  <maintainer email="jheselden@lincoln.ac.uk">James R. Heselden</maintainer>
  <maintainer email="jstevenson@lincoln.ac.uk">Jack Stevenson</maintainer>
  <license>MIT</license>

  <author email="jheselden@lincoln.ac.uk">James R. Heselden</author>
  <author email="jstevenson@lincoln.ac.uk">Jack Stevenson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>rosduct</depend>
  <depend>std_msgs</depend>
  <depend>topological_navigation</depend>

  <export></export>
</package>
